Added inital show tweet so tweets would be shown on loading. Chanaged refresh from 2 sec to 10 sec.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             index -= 1;
           }
         };
-        
-        setInterval(showTweets, 2000);
+        showTweets();
+        setInterval(showTweets, 10000);
 
       });
 
