--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           while(index >= 0){
             var tweet = streams.home[index];
             var $tweet = $('<div></div>');
-            $tweet.text('@' + tweet.user + ': ' + tweet.message);
+            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' at ' + tweet.created_at);
             $tweet.appendTo($body);
             index -= 1;
           }
