--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           while(index >= shwnTweets){
             var tweet = streams.home[index];
             var $tweet = $('<div></div>');
-            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' at ' + tweet.created_at);
+            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' at ' + tweet.created_at.toLocaleString());
             $tweet.appendTo($body);
             index -= 1;
           }
