--- a/index.html
+++ b/index.html
@@ -19,17 +19,31 @@
           (shwnTweets < 0 ? shwnTweets = 0 : shwnTweets)
           while(index >= shwnTweets){
             var tweet = streams.home[index];
+            var time = tweet.created_at.toLocaleString();
             var $tweet = $('<div></div>');
-            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' at ' + tweet.created_at.toLocaleString());
+            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' at ' + time);
             $tweet.appendTo($body);
             index -= 1;
           }
         };
-        showTweets();
-        setInterval(showTweets, 5000);
+        //showTweets();
+        //setInterval(showTweets, 5000);
 
       });
 
     </script>
+  <ul id = "tweets">
+    <li>
+      <h3>John McSmtih</h3>
+      <span class="message">I like to tweet things these days</span>
+      <br>
+      <span class="time">time</span>
+    </li>
+    <li>
+      <h3>John McSmtih</h3>
+      <span class="message">I like to tweet things these days</span>
+      <span class="time">time</span>
+    </li>
+  </ul>
   </body>
 </html>
