--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
+    <style>
+      body {
+        background-color: linen;
+      }
+      h2 {
+        color: maroon;
+        margin-left: 40px;
+      } 
+    </style>
   </head>
   <body>
     <script>
