Aded function showtweets to display name when clicked.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
           }
         };
 
+     
+
         showTweets();
+          $('h3').on('click', function(){
+          var name = $(this).closest('li').data('name');
+          console.log(name);
+        });
+
         //setInterval(showTweets, 1000);
 
       });
