Added refreshpage function so that when the new tweets are shown their names are registered as an event.

--- a/index.html
+++ b/index.html
@@ -71,15 +71,22 @@
           }
         };
 
-     
-
         showTweets();
-          $('h3').on('click', function(){
-          var name = $(this).closest('li').data('name');
-          console.log(name);
-        });
+        registerName();
 
-        //setInterval(showTweets, 1000);
+        var registerName = function (){
+          $('h3').on('click', function(){
+            var name = $(this).closest('li').data('name');
+            console.log(name);
+          });
+        };
+
+        var refreshpage = function(){ 
+          showTweets();
+          registerName();
+        };
+
+        //setInterval(refreshpage, 2000);
 
       });
 
