Refactored code so that all the functions that create the page are located at the bottom.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
           }
         };
 
-        showTweets();
-        registerName();
+
 
         var registerName = function (){
           $('h3').on('click', function(){
@@ -85,7 +84,8 @@
           showTweets();
           registerName();
         };
-
+        // create page 
+        refreshpage();
         //setInterval(refreshpage, 2000);
 
       });
